20220309 : Colocar imagens no README
20220309 : + Gerar imagens
20220309 : testar push
20220309 : Verificar mensagem de erro no Linux
20220309 : criar .gitignore