@@ -19,10 +19,10 @@ object Form1: TForm1
     TabOrder = 0
     object edTarefa: TLabeledEdit
       Left = 16
-      Height = 23
+      Height = 27
       Top = 24
       Width = 736
-      EditLabel.Height = 15
+      EditLabel.Height = 14
       EditLabel.Width = 736
       EditLabel.Caption = 'Tarefa'
       EditLabel.ParentColor = False
