@@ -76,7 +76,7 @@ var
 begin
   if sgTarefas.RowCount=1 then exit;
   s:=sgTarefas.Cells[1,sgTarefas.Row];
-  if MessageDlg('Commit', s+#10#13'Do you wish to Commit?', mtConfirmation, [mbYes, mbNo],0) = mrYes then begin
+  if MessageDlg('Commit', s+#10#13'Deseja informar como concluída a tarefa?', mtConfirmation, [mbYes, mbNo],0) = mrYes then begin
     lst := TStringList.Create();
     if FileExists(chgfn) then
       lst.LoadFromFile(chgfn);
@@ -91,7 +91,7 @@ begin
     ShowMessage('ERROR : git add .'+sOut);
     exit;
   end;
-  if not RunCommandInDir(cDir,'git',['commit','-m',s],sOut,[poWaitOnExit,poStderrToOutPut,poNewConsole{poNoConsole}]) then begin
+  if not RunCommandInDir(cDir,'git',['commit','-m',s],sOut,[poWaitOnExit,poStderrToOutPut,poNoConsole]) then begin
     ShowMessage('ERROR : git commit -m '+QuotedStr(s)+sOut);
     exit;
   end;
